Fixed and overflow bug on mobile

--- a/css/components/_layout.scss
+++ b/css/components/_layout.scss
@@ -438,7 +438,7 @@ $gutter: 24px;
 // ======================================
 // =========== SECTION ABOUT ============
 // ======================================
-.bg-squares{
+.svg-squares-about{
   width: 100%;
   transform: scale(3.65);
 }
@@ -463,7 +463,6 @@ $gutter: 24px;
 }
 
 .title{
-    border: 1px solid blue;
     color: #333333;
     text-align: center;
     transform: translate3d(-236px,77px ,0);
@@ -772,6 +771,11 @@ $gutter: 24px;
 // ======================================
 // ============ SECTION QUOTE ===========
 // ======================================
+.svg-squares-quote{
+  width: 100%;
+  transform: scale(3.3);
+}
+
 .bg-squares-quote{
   width: 100%;
   overflow-x: hidden;
@@ -786,7 +790,7 @@ $gutter: 24px;
   }
 
   @include responsive(xxs){
-    top: -190px;
+    top: -155px;
     left: 0;
   }
 }
